--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
 * {
-  background-color: rgb(117, 209, 255);
+  background-color: #149edc;
   font-size: 62.5%;
   box-sizing: border-box;
   margin-top: 0;
@@ -7,18 +7,30 @@
   margin-left: 0;
   margin-right: 0;
   max-width: 100vw;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .header {
   margin-bottom: 20px;
   text-align: center;
   font-size: 2rem;
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: rgb(14, 0, 135);
+  background-color: #149edc;
   color: #ffffff;
   padding: 10px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-
+.navbar {
+  background-color: #ffffff;
+  display: flex;
+  height: 60px;
+}
+#bbc_logo {
+  background-color: #ffffff;
+  height: 40px;
+  justify-self: left;
+  align-self: center;
+  margin-left: 10px;
+}
 input {
   background-color: #ffffff;
 }
@@ -71,7 +83,9 @@ div ul li {
   position: relative;
   width: 80px;
   height: 80px;
+  background-color: rgb(117, 209, 255);
 }
+
 .lds-roller div {
   animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
   transform-origin: 40px 40px;
