--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@
   background-color: #149edc;
 }
 
+.navbar {
+  background-color: #ffffff;
+  display: flex;
+  top: 0px;
+}
+
 .weatherbar {
   display: flex;
   margin: auto;
@@ -35,12 +41,6 @@
 
 .weatherbarwrap {
   background-color: #149edc;
-}
-
-.navbar {
-  background-color: #ffffff;
-  display: flex;
-  height: 60px;
 }
 
 #bbc_logo {
@@ -104,12 +104,19 @@ ul li:hover {
   background-color: #ededed;
 }
 
+.main_section {
+  background-image: url("./images/background_mob.jpeg");
+  background-size: 100vw;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  height: 1000px;
+}
+
 #weatherRoot {
   background-color: #ffffff;
   display: none;
   align-items: center;
   justify-content: center;
-  height: 200px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 2rem;
   text-align: center;
@@ -123,7 +130,160 @@ ul li:hover {
   font: inherit;
 }
 
+.spacer {
+  height: 1px;
+  margin-bottom: 50px;
+}
+
+.weather_grid_case {
+  margin: auto;
+  width: 95%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 2fr 1fr;
+  grid-gap: 2px;
+  height: 250px;
+}
+.weather_grid_case .weather_cell1 {
+  background-color: rgb(255, 255, 255);
+  border-top: 8px solid #aad6ae;
+  grid-column: 1/5;
+  grid-row: 1/1;
+  display: grid;
+  grid-template-columns: 1fr 1fr 2fr;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+.weather_grid_case .weather_cell1 .weather_inner_cell1 {
+  grid-column: 1/4;
+  grid-row: 1/2;
+}
+.weather_grid_case .weather_cell1 .weather_inner_cell2 {
+  grid-column: 1/2;
+  grid-row: 2/4;
+}
+.weather_grid_case .weather_cell1 .weather_inner_cell3 {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+.weather_grid_case .weather_cell1 .weather_inner_cell4 {
+  grid-column: 2/3;
+  grid-row: 3/4;
+}
+.weather_grid_case .weather_cell1 .weather_inner_cell5 {
+  grid-column: 3/4;
+  grid-row: 2/4;
+}
+.weather_grid_case .weather_cell2 {
+  background-color: rgb(255, 255, 255);
+  border-bottom: 6px solid #aad6ae;
+  grid-column: 1/2;
+  grid-row: 2/2;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+.weather_grid_case .weather_cell2 .weather_inner_cell1 {
+  grid-column: 1/3;
+  grid-row: 1/2;
+}
+.weather_grid_case .weather_cell2 .weather_inner_cell2 {
+  grid-column: 1/2;
+  grid-row: 2/4;
+}
+.weather_grid_case .weather_cell2 .weather_inner_cell3 {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+.weather_grid_case .weather_cell2 .weather_inner_cell4 {
+  grid-column: 2/3;
+  grid-row: 3/4;
+}
+.weather_grid_case .weather_cell3 {
+  background-color: rgb(255, 255, 255);
+  border-bottom: 6px solid #aad6ae;
+  grid-column: 2/3;
+  grid-row: 2/2;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+.weather_grid_case .weather_cell3 .weather_inner_cell1 {
+  grid-column: 1/3;
+  grid-row: 1/2;
+}
+.weather_grid_case .weather_cell3 .weather_inner_cell2 {
+  grid-column: 1/2;
+  grid-row: 2/4;
+}
+.weather_grid_case .weather_cell3 .weather_inner_cell3 {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+.weather_grid_case .weather_cell3 .weather_inner_cell4 {
+  grid-column: 2/3;
+  grid-row: 3/4;
+}
+.weather_grid_case .weather_cell4 {
+  background-color: rgb(255, 255, 255);
+  border-bottom: 6px solid #aad6ae;
+  grid-column: 3/4;
+  grid-row: 2/2;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+.weather_grid_case .weather_cell4 .weather_inner_cell1 {
+  grid-column: 1/3;
+  grid-row: 1/2;
+}
+.weather_grid_case .weather_cell4 .weather_inner_cell2 {
+  grid-column: 1/2;
+  grid-row: 2/4;
+}
+.weather_grid_case .weather_cell4 .weather_inner_cell3 {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+.weather_grid_case .weather_cell4 .weather_inner_cell4 {
+  grid-column: 2/3;
+  grid-row: 3/4;
+}
+.weather_grid_case .weather_cell5 {
+  background-color: rgb(255, 255, 255);
+  border-bottom: 6px solid #afd252;
+  grid-column: 4/5;
+  grid-row: 2/2;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+.weather_grid_case .weather_cell5 .weather_inner_cell1 {
+  grid-column: 1/3;
+  grid-row: 1/2;
+}
+.weather_grid_case .weather_cell5 .weather_inner_cell2 {
+  grid-column: 1/2;
+  grid-row: 2/4;
+}
+.weather_grid_case .weather_cell5 .weather_inner_cell3 {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+.weather_grid_case .weather_cell5 .weather_inner_cell4 {
+  grid-column: 2/3;
+  grid-row: 3/4;
+}
+
+.map_mobile {
+  display: block;
+  width: 60%;
+  margin: auto;
+  padding-top: 50px;
+  padding-left: 20px;
+}
+
 .map {
+  display: none;
   width: 40%;
   padding-top: 50px;
   padding-left: 20px;
@@ -231,5 +391,19 @@ ul li:hover {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+@media screen and (min-width: 760px) {
+  .map {
+    display: block;
+    width: 45%;
+    padding-top: 50px;
+    padding-left: 20px;
+  }
+  .map_mobile {
+    display: none;
+    width: 100%;
+    padding-top: 50px;
+    padding-left: 20px;
   }
 }/*# sourceMappingURL=style.css.map */
