--- a/style.scss
+++ b/style.scss
@@ -12,7 +12,11 @@
 .case {
   background-color: #149edc;
 }
-
+.navbar {
+  background-color: #ffffff;
+  display: flex;
+  top: 0px;
+}
 .weatherbar {
   display: flex;
   margin: auto;
@@ -36,11 +40,6 @@
   background-color: #149edc;
 }
 
-.navbar {
-  background-color: #ffffff;
-  display: flex;
-  height: 60px;
-}
 #bbc_logo {
   background-color: #ffffff;
   height: 40px;
@@ -84,36 +83,204 @@
   height: 44px;
 }
 
-div {
-  font-size: 1.2rem;
-  text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-div ul {
-  font-size: 1rem;
-  text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
+ul {
+  margin: 0px;
 }
 
 div ul li {
-  font-size: 1.2rem;
+  font-size: 2rem;
+  padding-top: 5px;
+  padding-bottom: 5px;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   list-style-type: none;
+  border-bottom: 1px solid #ededed;
+}
+ul li:hover {
+  background-color: #ededed;
+}
+.main_section {
+  background-image: url("./images/background_mob.jpeg");
+  background-size: 100vw;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  height: 1000px;
 }
 
 #weatherRoot {
   background-color: #ffffff;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 2rem;
+  text-align: center;
+
   img {
     background-color: transparent;
   }
   div {
     background-color: transparent;
+    width: 100%;
+    font: inherit;
   }
+}
+.spacer {
+  height: 1px;
+  margin-bottom: 50px;
+}
+.weather_grid_case {
+  margin: auto;
+  width: 95%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr; //4 columns
+  grid-template-rows: 2fr 1fr; //2 rows
+  grid-gap: 2px;
+  height: 250px;
+
+  .weather_cell1 {
+    background-color: rgb(255, 255, 255);
+    border-top: 8px solid #aad6ae;
+    grid-column: 1/5;
+    grid-row: 1/1;
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr; //3 columns
+    grid-template-rows: 1fr 1fr 1fr; //3 rows
+    .weather_inner_cell1 {
+      grid-column: 1/4;
+      grid-row: 1/2;
+    }
+    .weather_inner_cell2 {
+      grid-column: 1/2;
+      grid-row: 2/4;
+    }
+    .weather_inner_cell3 {
+      grid-column: 2/3;
+      grid-row: 2/3;
+    }
+    .weather_inner_cell4 {
+      grid-column: 2/3;
+      grid-row: 3/4;
+    }
+    .weather_inner_cell5 {
+      grid-column: 3/4;
+      grid-row: 2/4;
+    }
+  }
+  .weather_cell2 {
+    background-color: rgb(255, 255, 255);
+    border-bottom: 6px solid #aad6ae;
+    grid-column: 1/2;
+    grid-row: 2/2;
+    display: grid;
+    grid-template-columns: 1fr 2fr; //2 columns
+    grid-template-rows: 1fr 1fr 1fr; //3 rows
+    .weather_inner_cell1 {
+      grid-column: 1/3;
+      grid-row: 1/2;
+    }
+    .weather_inner_cell2 {
+      grid-column: 1/2;
+      grid-row: 2/4;
+    }
+    .weather_inner_cell3 {
+      grid-column: 2/3;
+      grid-row: 2/3;
+    }
+    .weather_inner_cell4 {
+      grid-column: 2/3;
+      grid-row: 3/4;
+    }
+  }
+  .weather_cell3 {
+    background-color: rgb(255, 255, 255);
+    border-bottom: 6px solid #aad6ae;
+    grid-column: 2/3;
+    grid-row: 2/2;
+    display: grid;
+    grid-template-columns: 1fr 2fr; //2 columns
+    grid-template-rows: 1fr 1fr 1fr; //3 rows
+    .weather_inner_cell1 {
+      grid-column: 1/3;
+      grid-row: 1/2;
+    }
+    .weather_inner_cell2 {
+      grid-column: 1/2;
+      grid-row: 2/4;
+    }
+    .weather_inner_cell3 {
+      grid-column: 2/3;
+      grid-row: 2/3;
+    }
+    .weather_inner_cell4 {
+      grid-column: 2/3;
+      grid-row: 3/4;
+    }
+  }
+  .weather_cell4 {
+    background-color: rgb(255, 255, 255);
+    border-bottom: 6px solid #aad6ae;
+    grid-column: 3/4;
+    grid-row: 2/2;
+    display: grid;
+    grid-template-columns: 1fr 2fr; //2 columns
+    grid-template-rows: 1fr 1fr 1fr; //3 rows
+    .weather_inner_cell1 {
+      grid-column: 1/3;
+      grid-row: 1/2;
+    }
+    .weather_inner_cell2 {
+      grid-column: 1/2;
+      grid-row: 2/4;
+    }
+    .weather_inner_cell3 {
+      grid-column: 2/3;
+      grid-row: 2/3;
+    }
+    .weather_inner_cell4 {
+      grid-column: 2/3;
+      grid-row: 3/4;
+    }
+  }
+  .weather_cell5 {
+    background-color: rgb(255, 255, 255);
+    border-bottom: 6px solid #afd252;
+    grid-column: 4/5;
+    grid-row: 2/2;
+    display: grid;
+    grid-template-columns: 1fr 2fr; //2 columns
+    grid-template-rows: 1fr 1fr 1fr; //3 rows
+    .weather_inner_cell1 {
+      grid-column: 1/3;
+      grid-row: 1/2;
+    }
+    .weather_inner_cell2 {
+      grid-column: 1/2;
+      grid-row: 2/4;
+    }
+    .weather_inner_cell3 {
+      grid-column: 2/3;
+      grid-row: 2/3;
+    }
+    .weather_inner_cell4 {
+      grid-column: 2/3;
+      grid-row: 3/4;
+    }
+  }
+}
+
+.map_mobile {
+  display: block;
+  width: 60%;
+  margin: auto;
+  padding-top: 50px;
+  padding-left: 20px;
+}
+.map {
+  display: none;
+  width: 40%;
+  padding-top: 50px;
+  padding-left: 20px;
 }
 
 .lds-roller {
@@ -200,5 +367,20 @@ div ul li {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@media screen and (min-width: 760px) {
+  .map {
+    display: block;
+    width: 45%;
+    padding-top: 50px;
+    padding-left: 20px;
+  }
+  .map_mobile {
+    display: none;
+    width: 100%;
+    padding-top: 50px;
+    padding-left: 20px;
   }
 }
