--- a/style.css
+++ b/style.css
@@ -109,25 +109,6 @@ ul li:hover {
   background-size: 100vw;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  height: 1000px;
-}
-
-#weatherRoot {
-  background-color: #ffffff;
-  display: none;
-  align-items: center;
-  justify-content: center;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 2rem;
-  text-align: center;
-}
-#weatherRoot img {
-  background-color: transparent;
-}
-#weatherRoot div {
-  background-color: transparent;
-  width: 100%;
-  font: inherit;
 }
 
 .spacer {
@@ -135,143 +116,201 @@ ul li:hover {
   margin-bottom: 50px;
 }
 
-.weather_grid_case {
+#weatherHeader {
   margin: auto;
   width: 95%;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 2fr 1fr;
-  grid-gap: 2px;
-  height: 250px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: #ffffff;
+  font-size: 2.8rem;
+  text-align: left;
+  margin-bottom: 10px;
+  font-weight: 300;
 }
-.weather_grid_case .weather_cell1 {
-  background-color: rgb(255, 255, 255);
+
+#weatherRoot {
+  margin: auto;
+  width: 95%;
+  display: none;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 130px 1fr;
+  grid-gap: 2px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: #ffffff;
+  font-size: 4rem;
+  text-align: left;
+  font-weight: 300;
+}
+#weatherRoot [class*=weather_cell]:hover {
+  background-color: rgba(57, 66, 93, 0.445);
+}
+#weatherRoot .weather_cell1 {
+  background-color: rgba(81, 92, 129, 0.445);
   border-top: 8px solid #aad6ae;
   grid-column: 1/5;
   grid-row: 1/1;
   display: grid;
-  grid-template-columns: 1fr 1fr 2fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 0.5fr 2fr;
+  grid-template-rows: 50px 30px 30px 20px;
+  align-items: center;
+  padding-left: 10px;
+  font-size: 3.4rem;
+  font-weight: 300;
 }
-.weather_grid_case .weather_cell1 .weather_inner_cell1 {
+#weatherRoot .weather_cell1 .weather_inner_cell1 {
   grid-column: 1/4;
   grid-row: 1/2;
 }
-.weather_grid_case .weather_cell1 .weather_inner_cell2 {
+#weatherRoot .weather_cell1 .weather_inner_cell2 {
   grid-column: 1/2;
   grid-row: 2/4;
 }
-.weather_grid_case .weather_cell1 .weather_inner_cell3 {
+#weatherRoot .weather_cell1 .weather_inner_cell3 {
   grid-column: 2/3;
   grid-row: 2/3;
+  border-left: 2px white solid;
+  padding-left: 20px;
+  display: grid;
+  align-content: center;
+  height: 30px;
+  font-weight: 500;
 }
-.weather_grid_case .weather_cell1 .weather_inner_cell4 {
+#weatherRoot .weather_cell1 .weather_inner_cell4 {
   grid-column: 2/3;
   grid-row: 3/4;
+  border-left: 2px white solid;
+  padding-left: 20px;
+  display: grid;
+  align-content: center;
+  height: 30px;
 }
-.weather_grid_case .weather_cell1 .weather_inner_cell5 {
+#weatherRoot .weather_cell1 .weather_inner_cell5 {
+  align-self: start;
   grid-column: 3/4;
   grid-row: 2/4;
 }
-.weather_grid_case .weather_cell2 {
-  background-color: rgb(255, 255, 255);
+#weatherRoot .weather_cell2 {
+  background-color: rgba(81, 92, 129, 0.445);
   border-bottom: 6px solid #aad6ae;
   grid-column: 1/2;
   grid-row: 2/2;
   display: grid;
   grid-template-columns: 1fr 2fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 40px 25px 25px 10px;
+  align-items: center;
+  padding-left: 10px;
 }
-.weather_grid_case .weather_cell2 .weather_inner_cell1 {
+#weatherRoot .weather_cell2 .weather_inner_cell1 {
   grid-column: 1/3;
   grid-row: 1/2;
 }
-.weather_grid_case .weather_cell2 .weather_inner_cell2 {
+#weatherRoot .weather_cell2 .weather_inner_cell2 {
   grid-column: 1/2;
   grid-row: 2/4;
 }
-.weather_grid_case .weather_cell2 .weather_inner_cell3 {
+#weatherRoot .weather_cell2 .weather_inner_cell3 {
   grid-column: 2/3;
   grid-row: 2/3;
+  font-weight: 500;
 }
-.weather_grid_case .weather_cell2 .weather_inner_cell4 {
+#weatherRoot .weather_cell2 .weather_inner_cell4 {
   grid-column: 2/3;
   grid-row: 3/4;
 }
-.weather_grid_case .weather_cell3 {
-  background-color: rgb(255, 255, 255);
+#weatherRoot .weather_cell2 .weather_inner_cell5 {
+  display: none;
+}
+#weatherRoot .weather_cell3 {
+  background-color: rgba(81, 92, 129, 0.445);
   border-bottom: 6px solid #aad6ae;
   grid-column: 2/3;
   grid-row: 2/2;
   display: grid;
   grid-template-columns: 1fr 2fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 40px 25px 25px 10px;
+  align-items: center;
+  padding-left: 10px;
 }
-.weather_grid_case .weather_cell3 .weather_inner_cell1 {
+#weatherRoot .weather_cell3 .weather_inner_cell1 {
   grid-column: 1/3;
   grid-row: 1/2;
 }
-.weather_grid_case .weather_cell3 .weather_inner_cell2 {
+#weatherRoot .weather_cell3 .weather_inner_cell2 {
   grid-column: 1/2;
   grid-row: 2/4;
 }
-.weather_grid_case .weather_cell3 .weather_inner_cell3 {
+#weatherRoot .weather_cell3 .weather_inner_cell3 {
   grid-column: 2/3;
   grid-row: 2/3;
+  font-weight: 500;
 }
-.weather_grid_case .weather_cell3 .weather_inner_cell4 {
+#weatherRoot .weather_cell3 .weather_inner_cell4 {
   grid-column: 2/3;
   grid-row: 3/4;
 }
-.weather_grid_case .weather_cell4 {
-  background-color: rgb(255, 255, 255);
+#weatherRoot .weather_cell3 .weather_inner_cell5 {
+  display: none;
+}
+#weatherRoot .weather_cell4 {
+  background-color: rgba(81, 92, 129, 0.445);
   border-bottom: 6px solid #aad6ae;
   grid-column: 3/4;
   grid-row: 2/2;
   display: grid;
   grid-template-columns: 1fr 2fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 40px 25px 25px 10px;
+  align-items: center;
+  padding-left: 10px;
 }
-.weather_grid_case .weather_cell4 .weather_inner_cell1 {
+#weatherRoot .weather_cell4 .weather_inner_cell1 {
   grid-column: 1/3;
   grid-row: 1/2;
 }
-.weather_grid_case .weather_cell4 .weather_inner_cell2 {
+#weatherRoot .weather_cell4 .weather_inner_cell2 {
   grid-column: 1/2;
   grid-row: 2/4;
 }
-.weather_grid_case .weather_cell4 .weather_inner_cell3 {
+#weatherRoot .weather_cell4 .weather_inner_cell3 {
   grid-column: 2/3;
   grid-row: 2/3;
+  font-weight: 500;
 }
-.weather_grid_case .weather_cell4 .weather_inner_cell4 {
+#weatherRoot .weather_cell4 .weather_inner_cell4 {
   grid-column: 2/3;
   grid-row: 3/4;
 }
-.weather_grid_case .weather_cell5 {
-  background-color: rgb(255, 255, 255);
+#weatherRoot .weather_cell4 .weather_inner_cell5 {
+  display: none;
+}
+#weatherRoot .weather_cell5 {
+  background-color: rgba(81, 92, 129, 0.445);
   border-bottom: 6px solid #afd252;
   grid-column: 4/5;
   grid-row: 2/2;
   display: grid;
   grid-template-columns: 1fr 2fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 40px 25px 25px 10px;
+  align-items: center;
+  padding-left: 10px;
 }
-.weather_grid_case .weather_cell5 .weather_inner_cell1 {
+#weatherRoot .weather_cell5 .weather_inner_cell1 {
   grid-column: 1/3;
   grid-row: 1/2;
 }
-.weather_grid_case .weather_cell5 .weather_inner_cell2 {
+#weatherRoot .weather_cell5 .weather_inner_cell2 {
   grid-column: 1/2;
   grid-row: 2/4;
 }
-.weather_grid_case .weather_cell5 .weather_inner_cell3 {
+#weatherRoot .weather_cell5 .weather_inner_cell3 {
   grid-column: 2/3;
   grid-row: 2/3;
+  font-weight: 500;
 }
-.weather_grid_case .weather_cell5 .weather_inner_cell4 {
+#weatherRoot .weather_cell5 .weather_inner_cell4 {
   grid-column: 2/3;
   grid-row: 3/4;
+}
+#weatherRoot .weather_cell5 .weather_inner_cell5 {
+  display: none;
 }
 
 .map_mobile {
