--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ ul li:hover {
 #weatherHeader {
   margin: auto;
   width: 95%;
+  min-width: 500px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: #ffffff;
   font-size: 2.8rem;
@@ -140,16 +141,13 @@ ul li:hover {
   text-align: left;
   font-weight: 300;
 }
-#weatherRoot [class*=weather_cell]:hover {
-  background-color: rgba(57, 66, 93, 0.445);
-}
 #weatherRoot .weather_cell1 {
   background-color: rgba(81, 92, 129, 0.445);
   border-top: 8px solid #aad6ae;
   grid-column: 1/5;
   grid-row: 1/1;
   display: grid;
-  grid-template-columns: 1fr 0.5fr 2fr;
+  grid-template-columns: 0.5fr 0.5fr 2fr;
   grid-template-rows: 50px 30px 30px 20px;
   align-items: center;
   padding-left: 10px;
@@ -163,6 +161,14 @@ ul li:hover {
 #weatherRoot .weather_cell1 .weather_inner_cell2 {
   grid-column: 1/2;
   grid-row: 2/4;
+  margin-bottom: 0px;
+  align-self: center;
+  display: grid;
+  align-content: center;
+}
+#weatherRoot .weather_cell1 .weather_inner_cell2 img {
+  width: 60px;
+  height: 60px;
 }
 #weatherRoot .weather_cell1 .weather_inner_cell3 {
   grid-column: 2/3;
@@ -211,10 +217,14 @@ ul li:hover {
   grid-column: 2/3;
   grid-row: 2/3;
   font-weight: 500;
+  text-align: right;
+  padding-right: 15px;
 }
 #weatherRoot .weather_cell2 .weather_inner_cell4 {
   grid-column: 2/3;
   grid-row: 3/4;
+  text-align: right;
+  padding-right: 15px;
 }
 #weatherRoot .weather_cell2 .weather_inner_cell5 {
   display: none;
@@ -242,10 +252,14 @@ ul li:hover {
   grid-column: 2/3;
   grid-row: 2/3;
   font-weight: 500;
+  text-align: right;
+  padding-right: 15px;
 }
 #weatherRoot .weather_cell3 .weather_inner_cell4 {
   grid-column: 2/3;
   grid-row: 3/4;
+  text-align: right;
+  padding-right: 15px;
 }
 #weatherRoot .weather_cell3 .weather_inner_cell5 {
   display: none;
@@ -273,10 +287,14 @@ ul li:hover {
   grid-column: 2/3;
   grid-row: 2/3;
   font-weight: 500;
+  text-align: right;
+  padding-right: 15px;
 }
 #weatherRoot .weather_cell4 .weather_inner_cell4 {
   grid-column: 2/3;
   grid-row: 3/4;
+  text-align: right;
+  padding-right: 15px;
 }
 #weatherRoot .weather_cell4 .weather_inner_cell5 {
   display: none;
@@ -304,13 +322,86 @@ ul li:hover {
   grid-column: 2/3;
   grid-row: 2/3;
   font-weight: 500;
+  text-align: right;
+  padding-right: 15px;
 }
 #weatherRoot .weather_cell5 .weather_inner_cell4 {
   grid-column: 2/3;
   grid-row: 3/4;
+  text-align: right;
+  padding-right: 15px;
 }
 #weatherRoot .weather_cell5 .weather_inner_cell5 {
   display: none;
+}
+#weatherRoot [class*=weather_cell]:hover {
+  background-color: rgba(57, 66, 93, 0.445);
+}
+#weatherRoot [class*=below-20] {
+  border-color: rgb(16, 103, 255);
+}
+#weatherRoot [class*=below-15] {
+  border-color: #5956fa;
+}
+#weatherRoot [class*=below-10] {
+  border-color: #5669fa;
+}
+#weatherRoot [class*=below-05] {
+  border-color: #5679fa;
+}
+#weatherRoot [class*=below-03] {
+  border-color: #56a0fa;
+}
+#weatherRoot [class*=below-02] {
+  border-color: #56d7fa;
+}
+#weatherRoot [class*=below-01] {
+  border-color: #89e2fb;
+}
+#weatherRoot [class*=below0] {
+  border-color: #89e2fb;
+}
+#weatherRoot [class*=below01] {
+  border-color: #a2e4f6;
+}
+#weatherRoot [class*=below02] {
+  border-color: #aad0d6;
+}
+#weatherRoot [class*=below03] {
+  border-color: #aad6cf;
+}
+#weatherRoot [class*=below05] {
+  border-color: #aad6c0;
+}
+#weatherRoot [class*=below08] {
+  border-color: #aad6ae;
+}
+#weatherRoot [class*=below11] {
+  border-color: #aed6aa;
+}
+#weatherRoot [class*=below15] {
+  border-color: #95e64a;
+}
+#weatherRoot [class*=below18] {
+  border-color: #d9ff43;
+}
+#weatherRoot [class*=below21] {
+  border-color: #ffe343;
+}
+#weatherRoot [class*=below25] {
+  border-color: #ffc343;
+}
+#weatherRoot [class*=below30] {
+  border-color: #ffaa43;
+}
+#weatherRoot [class*=below35] {
+  border-color: #ff9e43;
+}
+#weatherRoot [class*=below40] {
+  border-color: #ff7243;
+}
+#weatherRoot [class*=above40] {
+  border-color: #ff4343;
 }
 
 .map_mobile {
@@ -329,11 +420,10 @@ ul li:hover {
 }
 
 .lds-roller {
-  display: inline-block;
-  position: relative;
   width: 80px;
   height: 80px;
-  background-color: rgb(117, 209, 255);
+  background-color: transparent;
+  margin: auto;
 }
 
 .lds-roller div {
