--- a/style.css
+++ b/style.css
@@ -550,6 +550,10 @@ ul li:hover {
 
 .map_box_mobile {
   position: relative;
+  max-width: 450px;
+  margin: auto;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .map_mobile {
@@ -598,7 +602,7 @@ ul li:hover {
 .location_box_Inverness {
   height: 20px;
   position: absolute;
-  top: 35%;
+  top: 37%;
   left: 48%;
   display: flex;
   flex-direction: row;
@@ -628,8 +632,8 @@ ul li:hover {
 .location_box_Edinburgh {
   height: 20px;
   position: absolute;
-  top: 44%;
-  left: 56%;
+  top: 48%;
+  left: 54%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -658,8 +662,8 @@ ul li:hover {
 .location_box_Belfast {
   height: 20px;
   position: absolute;
-  top: 56%;
-  left: 39%;
+  top: 60%;
+  left: 37%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -688,7 +692,7 @@ ul li:hover {
 .location_box_Hull {
   height: 20px;
   position: absolute;
-  top: 67%;
+  top: 70%;
   left: 76%;
   display: flex;
   flex-direction: row;
@@ -718,7 +722,7 @@ ul li:hover {
 .location_box_Manchester {
   height: 20px;
   position: absolute;
-  top: 65%;
+  top: 70%;
   left: 46%;
   display: flex;
   flex-direction: row;
@@ -778,7 +782,7 @@ ul li:hover {
 .location_box_London {
   height: 20px;
   position: absolute;
-  top: 80%;
+  top: 82%;
   left: 72%;
   display: flex;
   flex-direction: row;
